Fix sidebar title alignment to fieldsets. Fix fieldset border color.

--- a/core/app/assets/stylesheets/admin/components/_sidebar.scss
+++ b/core/app/assets/stylesheets/admin/components/_sidebar.scss
@@ -3,7 +3,7 @@
 #sidebar {
   overflow: visible;
   border-top: 1px solid $color-border; 
-  margin-top: 16px;
+  margin-top: 18px;
 
   .sidebar-title {
     color: $color-2;
@@ -17,7 +17,7 @@
       background: #fff; 
       padding: 5px 10px; 
       position: relative; 
-      top: -13px;
+      top: -14px;
     }
   }
 
